3.0.2
======
05. Update devrename action in order to allow singla object renaming but also bulk updates for the
	object names, using filters like add prefix, change part of the name or insert into name.
04. Extend ServiceTargetAdministration to support milestones and related actions (notification and
	set value actions)
03. Defined execution parameters (conditions)  for init phase (always executed) and  run phase (called
	by demand by each action)
02, Update SupportGroupAdministration action to support all possible operation for related entities
01. Added possibility to use data already which already exists in the CoreItem structure.


3.0.1
======
15. Optimize dev action in order to speed up inventory that is used for definitions export or inventory
14. Implementation of system monitoring action and published as system action
13. Adapt engine to Remedy 9 (API and respective modules)
12. Redesign project configuration management
11. Optimize and adapt logging channels to the startup mode and disable default console logging for JDK
10. Implement plugin or client mode startup using a direct and simplified configuration file
09. Redevelop SupportGroupAdministration action
07. Redevelop KeypassAdministration action
06. Develop startup process using JAR library
05. Merge in base package AAR and SSO modules
04. Update file.wrapper action
03. Implement SupportGroupMigration action
02. Export help documents in plain text and wiki (md) and html formats
01. Design and implement new help model


3.0
======
03. Develop new action DEV area to set/associate forms for workflow objects
02. Aggregate parser, common, boot, runtime, aar and sso libraries into one single file
01. Public distribution over GitHub and under GNU license distribution


2.2
======
03. Update runtime cron engine
02. Implementation fo sysmon action
01. Environment: Build new distribution using 8.1 ARSystem libraries

2.1
======