@@ -201,7 +201,7 @@ app.runtime.parser.attach.class = org.areasy.runtime.engine.services.parser.file
 app.runtime.parser.file.class = org.areasy.runtime.engine.services.parser.file.BaseFileParser
 app.runtime.parser.xls.class = org.areasy.runtime.engine.services.parser.file.XLSFileParser
 app.runtime.parser.csv.class = org.areasy.runtime.engine.services.parser.file.CSVFileParser
-app.runtime.parser.txt.class = org.areasy.runtime.engine.services.parser.file.CSVFileParser
+app.runtime.parser.txt.class = org.areasy.runtime.engine.services.parser.file.TXTFileParser
 
 ################################################################################
 # Runtime Structures
